--- a/www/composer.json
+++ b/www/composer.json
@@ -1,4 +1,7 @@
 {
+    "require": {
+        "php": "8.1.*"
+    },
     "autoload": {
         "psr-4": {"Project\\": "public/local/php_interface/Project"}
     }
